Fix spacing between contiguous highlighted concepts reduce initial width of sidebar

--- a/webapp/trainerapp/static/css/app.css
+++ b/webapp/trainerapp/static/css/app.css
@@ -64,7 +64,7 @@ html, body {
 }
 
 .app-sidebar {
-  flex: 0 0 450px;
+  flex: 0 0 300px;
   overflow: auto;
 }
 
